# python-logger

./: .gitignore  .pre-commit-config.yaml  .telec-init-meta.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  renovate.json  teleclaude.yml
.github/prompts/: release-bump.prompt.yml
.github/workflows/: publish.yml  publish_token.yml  release.yml
docs/: design.md  publishing.md
docs/project/design/: architecture.md  architecture.rotation-drops-log-ownership.md  test-strategy.md
docs/project/policy/: conventions.md
docs/project/spec/: build-deploy.md  configuration.md  configuration.rotation-drops-log-ownership.md  dependencies.md  entry-points.md
docs/project/spec/feature/log_reading/: time-window.md
instrukt_ai_logging/: __init__.py  cli.py  install.py  logging.py
tests/: conftest.py  test_cli_follow.py  test_configure_logging.py  test_install.py  test_log_aggregation.py  test_trace_logging.py
tests/log_reading/: test_time_window.py
