[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instrukt-ai-logger"
version = "0.3.1"
description = "Centralized logging utilities for Python services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
instrukt-ai-logs = "instrukt_ai_logging.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["instrukt_ai_logging*"]

[tool.setuptools.package-data]
instrukt_ai_logging = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
